# ultraprop

./: .dockerignore  .gitignore  Cargo.toml  DEFECTS.md  PRODUCT.md  README.md  SCOPE-LOCK.md  VERSIONS.md  biome.json  fly.executor.toml  fly.gateway.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prop-firm-system-flow.excalidraw  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml
.impeccable/critique/: 2026-06-07T15-20-00Z__apps-trader.md
apps/admin/: package.json
apps/admin/src/: index.ts
apps/docs/: .gitignore  README.md  package.json  tsconfig.json  vercel.json  vocs.config.ts
apps/trader/: .env.example  .gitignore  DESIGN.md  SUMMARY.md  next.config.ts  package.json  vercel.json  vitest.config.ts
apps/trader/app/: globals.css  layout.tsx  page.tsx
apps/trader/components/: Redirect.tsx
apps/trader/lib/: auth.test.ts  auth.ts  chart-colors.ts  db.ts  identity.test.ts  identity.ts  privy-server.ts  (+5 more)
apps/websites/: .gitignore  next.config.ts  package.json
contracts/mock-usdc/: .gitignore  Move.toml  Published.toml
contracts/solana/: Anchor.toml  Cargo.toml
contracts/sui/: .gitignore  Move.toml  PRD.md  Published.toml  publish.json
deployments/: testnet.json
docs/: DEPLOY-FLY.md  V1-ONCHAIN-REDEPLOY-PLAN.md
scripts/: build-contracts.mjs  check-toolchain.mjs  clean.mjs  deploy-and-bootstrap.mjs  dev.mjs  predev.mjs  setup.mjs  upgrade-package.mjs
services/api-gateway/: Dockerfile  fly.toml  package.json
services/executor/: Dockerfile  README.md  fly.toml  package.json
services/risk-engine/: Cargo.toml
(+287 files in other folders)
